--- a/FodboldApp/FodboldApp/FodboldApp/View/Players.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/Players.xaml
@@ -36,7 +36,10 @@
                             </Grid.RowDefinitions>
                             <BoxView Color="White" Grid.Column="0" Grid.RowSpan="4"/>
                             <Image Source="{Binding ImageURL}" Grid.Row="0" HeightRequest="200" Margin="0,5,0,0"/>
-                            <Label Text="{Binding Name}" FontSize="12" Grid.Row="1" HorizontalOptions="CenterAndExpand" TextColor="#FB433C"/>
+                            <StackLayout Orientation="Horizontal" Grid.Row="1" HorizontalOptions="Center">
+                                <Label Text="{Binding Number,StringFormat='{0:D2}'}" FontSize="12" HorizontalOptions="Center" TextColor="#FB433C"/>
+                                <Label Text="{Binding Name}" FontSize="12" HorizontalOptions="Center" TextColor="#FB433C"/>
+                            </StackLayout>
                             <Label Text="{Binding Position}" FontSize="10" Grid.Row="2" HorizontalOptions="CenterAndExpand" TextColor="#243F73" Margin="0, 0, 0, 8"/>
                             <Label Text="Læs mere" FontSize="10" Grid.Row="3" HorizontalOptions="CenterAndExpand" TextColor="#17CC24"/>
                         </Grid>
