--- a/FodboldApp/FodboldApp/FodboldApp/View/OverHundredGames.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/OverHundredGames.xaml
@@ -36,7 +36,7 @@
                 <Label Text="KAMPE" Grid.Column="2" HorizontalOptions="FillAndExpand" HorizontalTextAlignment="Center" VerticalTextAlignment="Center" BackgroundColor="White"/>
             </Grid>
             <flv:FlowListView FlowColumnCount="1" SeparatorVisibility="None" HasUnevenRows="True"
-			   FlowItemsSource="{Binding PlayersList}">
+			   FlowItemsSource="{Binding PlayersList}" FlowLastTappedItem="{Binding SelectedItem, Mode=TwoWay}" FlowItemTappedCommand="{Binding PlayerDescriptionCommand}">
                 <flv:FlowListView.FlowColumnTemplate>
                     <DataTemplate>
                         <Grid ColumnSpacing="0">
