Fixed size for buttons

--- a/FodboldApp/FodboldApp/FodboldApp/View/FrontPage.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/FrontPage.xaml
@@ -41,9 +41,7 @@
                         </ListView>
                     </Grid>
 
-                    <Button Text="Næste"
-                HorizontalOptions="Center"
-                VerticalOptions="Center" Style="{StaticResource buttonStyle}"
+                    <Button Text="Næste" HorizontalOptions="Center" VerticalOptions="Center" Style="{StaticResource buttonStyle}"
                     Command="{Binding ContinueCommand}"/>
                 </StackLayout>
             </StackLayout>
