--- a/FodboldApp/FodboldApp/FodboldApp/App.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/App.xaml
@@ -22,6 +22,14 @@
                         </OnPlatform>
                     </Setter.Value>
                 </Setter>
+                <Setter Property="HeightRequest">
+                    <Setter.Value>
+                        <OnPlatform x:TypeArguments="x:Double">
+                            <OnPlatform.iOS>45</OnPlatform.iOS>
+                            <OnPlatform.Android>50</OnPlatform.Android>
+                        </OnPlatform>
+                    </Setter.Value>
+                </Setter>
                 <Setter Property="TextColor" Value="#000000" />
             </Style>
             
@@ -32,8 +40,16 @@
                 <Setter Property="WidthRequest">
                     <Setter.Value>
                         <OnPlatform x:TypeArguments="x:Double">
-                            <OnPlatform.iOS>80</OnPlatform.iOS>
+                            <OnPlatform.iOS>40</OnPlatform.iOS>
                             <OnPlatform.Android>85</OnPlatform.Android>
+                        </OnPlatform>
+                    </Setter.Value>
+                </Setter>
+                <Setter Property="HeightRequest">
+                    <Setter.Value>
+                        <OnPlatform x:TypeArguments="x:Double">
+                            <OnPlatform.iOS>40</OnPlatform.iOS>
+                            <OnPlatform.Android>45</OnPlatform.Android>
                         </OnPlatform>
                     </Setter.Value>
                 </Setter>
