--- a/FodboldApp/FodboldApp/FodboldApp/View/Chat.xaml
+++ b/FodboldApp/FodboldApp/FodboldApp/View/Chat.xaml
@@ -29,7 +29,7 @@
                                 <ColumnDefinition Width="40"/>
                             </Grid.ColumnDefinitions>
                             <abstractions:RoundedBoxView BackgroundColor="{Binding Admin, Converter={StaticResource bubbleColorConvert}}" CornerRadius="25" Grid.Column="{Binding Admin, Converter={StaticResource layoutConvert}}" MinimumHeightRequest="50"/>
-                            <Label Text="{Binding Content}" VerticalTextAlignment="Center" HorizontalTextAlignment="{Binding Admin, Converter={StaticResource textAllignmentConvert}}" Margin="10, 10, 10, 10" Grid.Column="{Binding Admin, Converter={StaticResource layoutConvert}}"/>
+                            <Label Text="{Binding Content}" VerticalTextAlignment="Center" HorizontalTextAlignment="Start" Margin="10, 10, 10, 10" Grid.Column="{Binding Admin, Converter={StaticResource layoutConvert}}"/>
                             <Image Source="icon" IsVisible="{Binding Admin}" Grid.Column="2"/>
                         </Grid>
                     </DataTemplate>
